# Axon

./: .gitignore  .mtm  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh.md  config-lmstudio.yaml  config.yaml  install.sh  rust_cli_release_guide.md
.github/workflows/: release.yml
docs/: PRESS.md  design.md  design_zh.md  lmstudio_api_reference.md  python_tool_calling_guide.md  release_milestone.md  spec_acceptance.md  spec_modules.md  spec_tasks.md
scripts/: test_lmstudio_api.py  test_vision.py
src/: atoms.rs  cli.rs  config.rs  executor.rs  llm.rs  main.rs  memory.rs  skills.rs
utils/: github_release.ps1
